--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
 
     <footer id="main-footer">
         <div class="footer-content container">
-            <p>Copyright&#169;2020. All Rights Reserved</p>
+            <p>Copyright &#169; <span id="year"></span>. All Rights Reserved</p>
             <div class="social">
                 <a href="http://twitter.com" title="twitter" target="_blank"><i class="fab fa-twitter fa-2x"></i></a>
                 <a href="http://facebook.com" target="
@@ -164,7 +164,7 @@
 
     <!-- typewriter effect  -->
     <script src="js/typewriter.js"></script>
-
+<script src="year.js"></script>
 </body>
 
 </html>
