--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
 
     <!-- typewriter effect  -->
     <script src="js/typewriter.js"></script>
-<script src="year.js"></script>
+<script src="js/year.js"></script>
 </body>
 
 </html>
