--- a/work.html
+++ b/work.html
@@ -141,7 +141,7 @@
 
     <footer id="main-footer">
         <div class="footer-content container">
-            <p>Copyright&#169;2020. All Rights Reserved</p>
+            <p>Copyright &#169; <span id="year"></span>. All Rights Reserved</p>
             <div class="social">
                 <a href="http://twitter.com" title="twitter" target="_blank"><i class="fab fa-twitter fa-2x"></i></a>
                 <a href="http://facebook.com" target="
@@ -152,7 +152,7 @@
             </div>
         </div>
     </footer>
-
+<script src="js/year.js"></script>
 </body>
 
 </html>
